# optimizer_examples

./: .gitignore
ceres_example/ceres_dir/: conanfile.py  conaninfo.txt
ceres_example/ceres_example/: CMakeLists.txt
ceres_example/ceres_example/scripts/: build.sh  curve_fitting_example.sh  powell_example.sh
ceres_example/ceres_example/src/: curve_fitting_example.cpp  powell_example.cpp
ipopt_examples/ipopt_dir/: install.sh
ipopt_examples/ipopt_example/: CMakeLists.txt
ipopt_examples/ipopt_example/scripts/: cppad_example.sh  cppad_ipopt_example.sh
ipopt_examples/ipopt_example/src/: cppad_example.cpp  cppad_ipopt_example.cpp
osqp_example/osqp_dir/: install.sh
osqp_example/osqp_example/: CMakeLists.txt
osqp_example/osqp_example/scripts/: osqp_eigen_example.sh  osqp_example.sh
osqp_example/osqp_example/src/: osqp_eigen_example.cpp  osqp_example.cpp
